# unseptbium

./: .gitignore  Cargo.toml  README.md  map.json  model.ipynb  pyproject.toml  requirements.txt  test.ipynb
data/: ref.stat.coldloop.txt  ref.stat.he.txt  ref.stat.hotloop.txt
docs/: SM-CORE-3.X3.cdw  SM-CORE-3.X3.cdw.bak  balance.md  doc.md  gas.md  marginalia.md  math.ipynb  math.md  math_deriv.ipynb
docs/blocks/: filters.md  gas.md  pump.md  radiator_pipes.md  supermatter.md  teg.md
scripts/: api.py  git_refactor.py
src/: lib.rs  main.rs
ss13_usb/: __init__.py  ss13_usb.pyi
supermattercore/: consts.py  graph.py  model.ipynb  reunitless.ipynb  smgraph.py  united.ipynb
supermattercore/bak/: math.ipynb  model.ipynb  sm-2-0.ipynb  sm-core.ipynb  sm.py  smm.py  supermatter.ipynb  xgm.yaml
supermattercore/ct/: sm.py  xgm.yaml
supermattercore/model/: __init__.py  consts.py  gases.py  pipes.py  pumps.py  supermatter.py  teg.py
supermattercore/units/: smm.py  smuless.py
